# renamr

./: .gitignore  LICENSE  README.md  renamr.cabal  renamr.hs  renamr.py  requirements.txt  tests.py
renamr/: __main__.py  file_handling.py  parser.py  processor.py  series_database.py
tests/: regex_test_data.json  test_parser.py  test_series_database.py
