Name:           renamr
Version:        0.1
Description:    Script to name series episodes
License:        OtherLicense
License-file:   LICENSE
Author:         Marco 'don' Kaulea
Maintainer:     DonMarco42@gmail.com
Build-Type:     Simple
cabal-version:   >= 1.2

Executable renamr
    Main-is:    renamr.hs
    Build-Depends:  base >= 3,tagsoup,regex-posix,directory,filepath
